# comfystream

./: .dockerignore  .editorconfig  .gitignore  .uv-cheatsheet.md  BATCH_PROCESSING_README.md  BYOC_README.md  CHANGES.md  Dockerfile.byow  Dockerfile.uv  Dockerfile.uv.dev  HANDOVER_BYOC.md  MANIFEST.in  Makefile.docker  QUICK_REFERENCE_BYOC.md  README.md  README_BYOC.md  RELEASE_NOTES_v0.1.6.md  TRICKLE_INTEGRATION.md  TRICKLE_PIPELINE_INTEGRATION.md  UV_MIGRATION.md  WHEP_INTEGRATION.md  WHIP_INTEGRATION.md  __init__.py  audio-processing-flow  benchmark.py  benchmark_batch_processing.py  build.py  build_tensorrt.py  build_tensorrt_internal.sh  client.py  comfystream_trickle_client.py  comfystream_trickle_guide.py  debug_imports.py  demo_usage.py  docker-compose.dev.yml  example.py  example_batch_processing.py  example_byoc_server.py  example_trickle_pipeline.py  example_usage.py  (+21 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: comfyui-base.yaml  docker-streamdiffusion.yaml  docker.yaml  opencv-cuda-artifact.yml  opencv.yaml  publish-comfyui-node.yaml  registry-publish.yaml  release.yaml  test.yaml  ui-kit-release.yml
.husky/: pre-commit
byoc/: BUILD.md  Dockerfile.register_capability  Dockerfile.reverse_server  docker-compose.yaml  register_capability.py
configs/: QUICK_REFERENCE.md  build_targets.yaml  comfy-lock.yaml  models-ipadapter.yaml  models.yaml  nodes-minimal.yaml  nodes-streamdiffusion.yaml  nodes.yaml  sd15_multicontrol.yaml  streamdiffusion_models.yaml
docker/: Dockerfile  Dockerfile-cv2.base  Dockerfile.base  Dockerfile.base.blackwell  Dockerfile.blackwell  Dockerfile.byoc  Dockerfile.opencv  Dockerfile.register_capability  Dockerfile.reverse_server  Dockerfile.vllm  README-BYOC.md  README.md  byoc-entrypoint.sh  docker-compose.yaml  docker-compose.yml  entrypoint-byoc.sh  entrypoint-byow.sh  entrypoint.sh  install-torchaudio.sh  livepeer.dockerfile  register_capability.py  supervisord.conf  vllm-entrypoint.sh
docker/byoc/: BUILD.md
docs/: VLLM_INTEGRATION.md  multiple_outputs_architecture.md  node-serialization-fix.md
examples/: README.md  byoc_test_client.py  comfystream_trickle_example.py  stream_status_checker.py  test_whep_subscribe.py  translation_example.py  trickle_example.py  trickle_integration_example.py  whep_client_example.py  whip_client_example.py  whip_whep_integration_test.py
nodes/: __init__.py  server_manager.py  settings_storage.py
nodes/api/: __init__.py
nodes/audio_utils/: __init__.py  audio_transcription_node.py  faster_whisper.py  load_audio_tensor.py  load_audio_tensor_stream.py  pitch_shift.py  save_audio_tensor.py
nodes/native_utils/: __init__.py  send_tensor_websocket.py
nodes/tensor_utils/: __init__.py  load_batch_tensor.py  load_tensor.py  performance_nodes.py  performance_timer.py  save_tensor.py  save_text_tensor.py
nodes/text_utils/: __init__.py  save_text_tensor.py  srt_generator_node.py
nodes/video_stream_utils/: __init__.py  primary_input_load_image.py
nodes/web/: __init__.py  server_components.py
nodes/web/js/: comfystream_ui_preview_node.js  launcher.js  settings.js
opencv-cuda/: __init__.py  opencv_utils.py  pyproject.toml  setup.py
pipelines/: __init__.py  streamdiffusion.py
scripts/: README.md  __init__.py  monitor_pid_resources.py
scripts/ansible/: inventory.yaml
scripts/ansible/plays/: setup_comfystream.yaml
scripts/comfystream/: build_trt.py
server/: __init__.py  actions.py  api.py  api_spec.py  app.py  app_api.py  app_multi.py  byoc.py  byoc_handler.py  byoc_server.py  cleanup_manager.py  comfy_stream_handler.py  comfystream  frame_processor.py  health.py  main.py  pipeline.py  pipeline_api.py  process.py  secondary_channel_examples.py  trickle_api.py  trickle_integration.py  trickle_integration_fallback.py  trickle_pipeline.py  trickle_stream_handler.py  trickle_stream_manager.py  trickle_utils.py  twilio_utils.py  utils_byoc.py  webrtc_utils.py  whep_handler.py  whip_handler.py
server/comfystream_utils/utils/: fps_meter.py
server/http_streaming/: routes.py
server/metrics/: __init__.py  pipeline_stats.py  prometheus_metrics.py  stream_stats.py  track_stats.py
server/utils/: __init__.py  fps_meter.py
settings/: comfystream_settings.json
src/comfystream/: __init__.py  buffered_processor.py  client.py  client_api.py  client_multi.py  comfy_loader.py  exceptions.py  frame.py  frame_logging.py  frame_proxy.py  modalities.py  node_validation.py  pipeline.py  pipeline_api.py  pipeline_multi.py  pipeline_state.py  prompts.py  tensor_cache.py  tensor_cache_multi.py  trickle.py  trickle_app.py  trickle_processor.py  utils.py  utils_api.py
src/comfystream/scripts/: README.md  __init__.py  build_trt.py  constraints.txt  install_opencv_cuda.py  opencv_utils.py  overrides.txt  setup_models.py  setup_nodes.py  setup_streamdiffusion_models.py  utils.py  verify_opencv_cuda.py
src/comfystream/server/: __init__.py  api.py  app_api.py  byoc_server.py  pipeline.py  pipeline_api.py  workflows.py
src/comfystream/translation/: __init__.py  client.py
test/: test.m4a  test_api.py  test_node_serialization.py  test_save_tensor.py  test_utils.py  test_vllm_translation.py
ui/: README-controller.md  README.md  package-lock.json  package.json  tsconfig.json
ui/src/: README_controller_mapping.md
ui/src/app/: globals.css
ui/src/components/: control-panel.tsx  control-panels-container.tsx  peer.tsx  (+8 more)
workflows/: sd15_all_dynamic_params_wlora.json  sd15_simple_dropdown_workflow (2)(1).json
workflows/comfystream/: audio-passthrough.json  audio-tensor-utils-example-api.json  audio-text-api.json  audio-to-text-example-api.json  audio-transcription-api.json  audio-transcription-srt-optimized.json  inverted-color-api.json  sd15-tensorrt-batch2-api.json  sd15-tensorrt-batch2-performance-api.json  sd15-tensorrt-batch2-tensor-api.json  tensor-utils-example-api.json  test generative workflow-2-api-t2i.json  text-tensor-example-api.json  text-tensor-utils-example-api.json
workflows/comfyui/: sd15-multi-cnet-depthanything-o2o.json
(+36 files in other folders)
