[build-system]
requires = ["setuptools>=64.0.0,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfystream"
description = "Build Live AI Video with ComfyUI"
version = "0.1.8"
license = { file = "LICENSE" }
dependencies = [
    "asyncio",
    "comfyui @ git+https://github.com/hiddenswitch/ComfyUI.git@7259c252ad745c12dd2412cc67f8e8163d0bbad1",
    "aiortc",
    "aiohttp",
    "aiohttp_cors",
    "toml",
    "twilio",
    "prometheus_client",
    "librosa",
    "mediapipe==0.10.15"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
server = [
    "pytrickle @ git+https://github.com/livepeer/pytrickle.git@v0.1.7"
]

[project.urls]
Repository = "https://github.com/yondonfu/comfystream"

[tool.comfy]
PublisherId = "livepeer-comfystream"
DisplayName = "ComfyStream"
Icon = "https://raw.githubusercontent.com/livepeer/comfystream-docs/main/logo/icon-light-120px.svg" # SVG, PNG, JPG or GIF (MAX. 800x400px)

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src", "nodes"]}}

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # let the formatter handle long lines
    "E402",  # module level import not at top (required for ComfyUI)
    "E722",  # bare except (existing code patterns)
    "F401",  # imported but unused (many re-exports)
    "F403",  # star imports (ComfyUI pattern)
    "F405",  # may be undefined from star imports
    "F841",  # assigned but never used (temporary)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
